--- a/rakefile
+++ b/rakefile
@@ -5,7 +5,7 @@ task :deploy_staging do
 end
 
 task :deploy_live do
-      sh %{rsync -avz --delete _site/ magellan:/my/dir/to/live/ --exclude '.git' }
+      sh %{rsync -avz --delete --exclude '.git' _site/ magellan:/srv/sjackson.net/live/public_html}
 end
 
 task :server do
